# IFEM-Darcy

./: CMakeLists.txt  Darcy.C  Darcy.h  DarcyArgs.C  DarcyArgs.h  DarcySolutions.C  DarcySolutions.h  README.md  SIMDarcy.h  main_Darcy.C  main_DarcyCorrection.C
Common/Darcy/: CMakeLists.txt  Darcy.C  Darcy.h  DarcyAdvection.C  DarcyAdvection.h  DarcyEnums.h  DarcyMaterial.C  DarcyMaterial.h  DarcySolutions.C  DarcySolutions.h  DarcyTransport.C  DarcyTransport.h  DarcyTransportCorr.C  DarcyTransportCorr.h  MixedDarcy.C  MixedDarcy.h  SIMDarcy.C  SIMDarcy.h  SIMDarcyAdap.h  SIMDarcyAdvection.C  SIMDarcyAdvection.h  SIMDarcySchedule.C  SIMDarcySchedule.h  SIMDarcyTransportCorr.C  SIMDarcyTransportCorr.h
Common/Darcy/Test/: TestSIMDarcy.C
Test/: Dirac.reg  Dirac.xinp  Dirac3D.reg  Dirac3D.xinp  Element.reg  Element.xinp  Element3D.reg  Element3D.xinp  Lshape_p2_b5.reg  Lshape_p2_b5.xinp  Lshape_p2_b5_adap.hreg  Lshape_p2_b5_adap.reg  Lshape_p2_b5_adap.vreg  SimpleSquare.reg  SimpleSquare.xinp  SimpleSquare2p.reg  SimpleSquare2p.xinp  SquareCorr-p1-AL.reg  SquareCorr-p1.reg  SquareCorr-p1.xinp  SquareCorr-p2.reg  SquareCorr-p2.xinp  SquareCorr.xinp  SquareCorr2-p1.reg  SquareCorr2-p1.xinp  SquareCorr2-p2.reg  SquareCorr2-p2.xinp  SquareCorr3-p1.reg  SquareCorr3-p1.xinp  SquareCorr3-p2.reg  SquareCorr3-p2.xinp  SquareCorrLin-p1.reg  SquareCorrLin-p1.xinp  SquareCorrLin-p2.reg  TestSIMDarcy.C  Tracer-adap-concentration.reg  Tracer-adap-pressure.reg  Tracer-adap-recovery.reg  Tracer-adap-recovery_conc.reg  Tracer-adap-recovery_press.reg  (+52 more)
Test/MPI/: Lshape_p2_b5.reg  Lshape_p2_b5_adap.reg
doc/: Darcy.dox.in  Doxyfile.in
jenkins/: build.sh
